unpackaged/main/default/objects/breadwinner_ns__BW_Location__c/breadwinner_ns__BW_Location__c.object-meta.xml
<CustomObject>
    <label>NetSuite Location</label>
    <nameField>
        <label>NetSuite Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NetSuite Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>