unpackaged/main/default/objects/breadwinner_ns__BW_Location__c/fields/breadwinner_ns__IncludeInControlTower__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__IncludeInControlTower__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include In Control Tower</label>
    <type>Checkbox</type>
</CustomField>