unpackaged/main/default/objects/breadwinner_ns__BW_Location__c/fields/breadwinner_ns__Latitude__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Latitude__c</fullName>
    <label>Latitude</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>