unpackaged/main/default/objects/breadwinner_ns__BW_Location__c/fields/breadwinner_ns__LocationType__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__LocationType__c</fullName>
    <label>Location Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>