unpackaged/main/default/objects/breadwinner_ns__BW_Location__c/fields/breadwinner_ns__MakeInventoryAvailable__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__MakeInventoryAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Make Inventory Available</label>
    <type>Checkbox</type>
</CustomField>