unpackaged/main/default/objects/breadwinner_ns__BW_Location__c/fields/breadwinner_ns__UseBins__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__UseBins__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Bins</label>
    <type>Checkbox</type>
</CustomField>