unpackaged/main/default/objects/breadwinner_ns__BW_Location__c/listViews/breadwinner_ns__All.listView-meta.xml
<ListView>
    <fullName>breadwinner_ns__All</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_ns__IsInactive__c</columns>
    <columns>breadwinner_ns__Parent__c</columns>
    <columns>breadwinner_ns__MakeInventoryAvailable__c</columns>
    <columns>breadwinner_ns__MakeInventoryAvailableStore__c</columns>
    <columns>breadwinner_ns__IncludeInControlTower__c</columns>
    <columns>breadwinner_ns__UseBins__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>